--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "cdk": "cdk",
     "fix": "run-s fix:*",
     "fix:prettier": "prettier \"./**/*.ts\" --write",
-    "fix:lint": "eslint lib --ext .ts --fix"
+    "fix:lint": "eslint lib --ext .ts --fix",
+    "start:local": "node --experimental-specifier-resolution=node local-server-cjs.js"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.22.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
+    "express": "^5.1.0",
     "fishery": "^2.2.2",
     "hardhat": "2.22.15",
     "jest": "^29.5.0",
