simplify network and provider config

--- a/lib/config/rpcProviderProdConfig.json
+++ b/lib/config/rpcProviderProdConfig.json
@@ -1,165 +1,57 @@
 [
   {
-    "chainId": 42220,
+    "chainId": 1,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_42220", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 43114,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_43114", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 56,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_56", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
+    "providerInitialWeights": [1],
+    "providerUrls": ["ALCHEMY_1"],
+    "providerNames": ["ALCHEMY"]
   },
   {
     "chainId": 10,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_10", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 11155111,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["ALCHEMY_11155111", "UNIRPC_0"],
-    "providerNames": ["ALCHEMY", "UNIRPC"],
-    "enableDbSync": true
+    "providerInitialWeights": [1],
+    "providerUrls": ["ALCHEMY_10"],
+    "providerNames": ["ALCHEMY"]
   },
   {
     "chainId": 137,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_137", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
+    "providerInitialWeights": [1],
+    "providerUrls": ["ALCHEMY_137"],
+    "providerNames": ["ALCHEMY"]
   },
   {
     "chainId": 42161,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_42161", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
+    "providerInitialWeights": [1],
+    "providerUrls": ["ALCHEMY_42161"],
+    "providerNames": ["ALCHEMY"]
   },
   {
     "chainId": 8453,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_8453", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
+    "providerInitialWeights": [1],
+    "providerUrls": ["ALCHEMY_8453"],
+    "providerNames": ["ALCHEMY"]
   },
   {
-    "chainId": 1,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1, 0],
-    "providerUrls": ["QUICKNODE_1", "UNIRPC_0", "QUICKNODERETH_1"],
-    "providerNames": ["QUICKNODE", "UNIRPC", "QUICKNODERETH"]
-  },
-  {
-    "chainId": 81457,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_81457", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 7777777,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_7777777", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 324,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_324", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 480,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_480", "UNIRPC_0"],
-    "providerNames": ["QUICKNODE", "UNIRPC"]
-  },
-  {
-    "chainId": 1301,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [0, 1],
-    "providerUrls": ["QUICKNODE_1301", "ALCHEMY_1301"],
-    "providerNames": ["QUICKNODE", "ALCHEMY"]
-  },
-  {
-    "chainId": 10143,
+    "chainId": 11155111,
     "useMultiProviderProb": 1,
     "latencyEvaluationSampleProb": 0,
     "healthCheckSampleProb": 0,
     "providerInitialWeights": [1],
-    "providerUrls": ["UNIRPC_0"],
-    "providerNames": ["UNIRPC"]
-  },
-  {
-    "chainId": 84532,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [1],
-    "providerUrls": ["UNIRPC_0"],
-    "providerNames": ["UNIRPC"]
-  },
-  {
-    "chainId": 130,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [1],
-    "providerUrls": ["UNIRPC_0"],
-    "providerNames": ["UNIRPC"]
-  },
-  {
-    "chainId": 1868,
-    "useMultiProviderProb": 1,
-    "latencyEvaluationSampleProb": 0,
-    "healthCheckSampleProb": 0,
-    "providerInitialWeights": [1],
-    "providerUrls": ["UNIRPC_0"],
-    "providerNames": ["UNIRPC"]
+    "providerUrls": ["ALCHEMY_11155111"],
+    "providerNames": ["ALCHEMY"],
+    "enableDbSync": true
   }
 ]
