--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/bunyan": "^1.8.6",
     "@types/chai-as-promised": "^7.1.4",
     "@types/expect": "^24.3.0",
+    "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.6",
     "@types/http-errors": "^1.8.0",
     "@types/lodash": "^4.14.182",
@@ -67,14 +68,12 @@
     "sinon": "^12.0.1",
     "ts-jest": "^29.1.0",
     "ts-node": "^8.10.2",
+    "tsx": "^3.12.7",
     "typechain": "^5.0.0",
-    "typescript": "^4.2.3",
-    "@types/express": "^4.17.17",
-    "tsx": "^3.12.7"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@datastructures-js/priority-queue": "^6.3.1",
-    "express": "^4.18.2",
     "@hapi/joi": "^17.1.1",
     "@middy/core": "^2.4.1",
     "@middy/http-error-handler": "^2.4.1",
@@ -90,7 +89,7 @@
     "@types/semver": "^7.5.8",
     "@types/sinon": "^10.0.6",
     "@types/stats-lite": "^2.2.0",
-    "@uniswap/default-token-list": "^11.13.0",
+    "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/router-sdk": "^2.0.2",
     "@uniswap/sdk-core": "^7.7.1",
@@ -112,6 +111,7 @@
     "constructs": "^10.0.0",
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
+    "express": "^4.18.2",
     "got": "^11.8.2",
     "graphql": "^16.5.0",
     "graphql-request": "^3.4.0",
