--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_TAGS: juiceswap/routing-api:beta
+  DOCKER_TAGS: dfxswiss/juiceswap-api:beta
   AZURE_RESOURCE_GROUP: rg-dfx-api-dev
   AZURE_CONTAINER_APP: ca-jsw-api-dev
   DEPLOY_INFO: ${{ github.ref_name }}-${{ github.sha }}
