feat: add Citrea testnet support to routing API
- Configure RPC provider for Citrea testnet (Chain ID 5115)
- Add V3-only routing configuration (V2 and V4 pools disabled)
- Update utility configurations for Citrea testnet
- Add chain name mapping for Citrea
- Use local SDK-Core with Citrea support

This integration prepares the API for Citrea testnet, pending Uniswap V3 deployment.

--- a/lib/config/rpcProviderProdConfig.json
+++ b/lib/config/rpcProviderProdConfig.json
@@ -53,5 +53,15 @@
     "providerUrls": ["ALCHEMY_11155111"],
     "providerNames": ["ALCHEMY"],
     "enableDbSync": false
+  },
+  {
+    "chainId": 5115,
+    "useMultiProviderProb": 1,
+    "latencyEvaluationSampleProb": 0,
+    "healthCheckSampleProb": 0,
+    "providerInitialWeights": [1],
+    "providerUrls": ["CITREA_RPC_URL"],
+    "providerNames": ["CITREA"],
+    "enableDbSync": false
   }
 ]
