--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/router-sdk": "^2.0.2",
-    "@uniswap/sdk-core": "^7.7.1",
+    "@uniswap/sdk-core": "file:../sdk/sdks/sdk-core",
     "@uniswap/smart-order-router": "4.22.19",
     "@uniswap/smart-wallet-sdk": "^2.1.1",
     "@uniswap/token-lists": "^1.0.0-beta.33",
