[NO-TASK]: Fix swap endpoints

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ ALCHEMY_137=your-alchemy-api-key        # Polygon
 ALCHEMY_8453=your-alchemy-api-key       # Base
 ALCHEMY_42161=your-alchemy-api-key      # Arbitrum
 ALCHEMY_11155111=your-alchemy-api-key   # Sepolia (testnet)
+ALCHEMY_5115=none
 
 # RPC Provider Health Monitoring
 RPC_PROVIDER_HEALTH_TABLE_NAME=rpc-provider-health-local
