Token discovery cache

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ UNI_GRAPHQL_HEADER_ORIGIN=https://app.uniswap.org
 
 # Internal Configuration
 UNICORN_SECRET=your_internal_api_secret
+
+PONDER_URL=
