--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@azure/data-tables": "^13.3.1",
     "@datastructures-js/priority-queue": "^6.3.1",
     "@hapi/joi": "^17.1.1",
     "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
