optimization: reduce rpc calls

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@
 PORT=3000
 CORS_ORIGIN=http://localhost:3001
 
+# Deployment Platform (AZURE or AWS)
+# Set to AZURE to bypass AWS-specific services like DynamoDB and CloudWatch
+# Leave unset or set to AWS for standard AWS deployment
+DEPLOYMENT_PLATFORM=AZURE
+
 # RPC Endpoints - Alchemy (core EVM networks)
 # Replace with your Alchemy API keys
 ALCHEMY_1=your-alchemy-api-key          # Ethereum Mainnet
