--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "dotenv": "^16.0.1",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
     "got": "^11.8.2",
     "graphql": "^16.5.0",
     "graphql-request": "^3.4.0",
