--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/bunyan": "^1.8.6",
     "@types/chai-as-promised": "^7.1.4",
     "@types/expect": "^24.3.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.23",
     "@types/hapi__joi": "^17.1.6",
     "@types/http-errors": "^1.8.0",
     "@types/lodash": "^4.14.182",
@@ -73,6 +73,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
     "@datastructures-js/priority-queue": "^6.3.1",
     "@hapi/joi": "^17.1.1",
     "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
@@ -115,7 +116,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "got": "^11.8.2",
-    "graphql": "^16.5.0",
+    "graphql": "^16.11.0",
     "graphql-request": "^3.4.0",
     "http-errors": "^1.7.3",
     "http-json-errors": "^1.2.10",
