--- a/api-clean/package.json
+++ b/api-clean/package.json
@@ -8,33 +8,35 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "jest",
+    "test:unit": "jest",
     "lint": "eslint src --ext .ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@juiceswapxyz/smart-order-router": "^0.0.1-beta.0",
     "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/sdk-core": "^0.0.1-beta.0",
+    "@juiceswapxyz/smart-order-router": "^0.0.1-beta.0",
     "@juiceswapxyz/universal-router-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v2-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v3-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v4-sdk": "^0.0.1-beta.0",
+    "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.33",
-    "@uniswap/default-token-list": "^11.19.0",
+    "bunyan": "^1.8.15",
+    "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1",
-    "bunyan": "^1.8.15",
-    "node-cache": "^5.1.2",
+    "graphql-request": "^6.1.0",
     "lodash": "^4.17.21",
-    "uuid": "^9.0.1",
-    "graphql-request": "^6.1.0"
+    "node-cache": "^5.1.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.9",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
