--- a/api-clean/.env.example
+++ b/api-clean/.env.example
@@ -30,6 +30,9 @@ CITREA_CACHE_TTL_SECONDS=60
 # METRICS_ENABLED=true
 # METRICS_PORT=9090
 
+# Optional: RPC Call Logging (for debugging RPC usage)
+# ENABLE_RPC_LOGGING=false
+
 # Rate Limiting
 RATE_LIMIT_QUOTE_PER_MINUTE=30
 RATE_LIMIT_GENERAL_PER_MINUTE=100
