full parity to previous AWS implementation

--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,15 @@ RPC_137=https://polygon-mainnet.g.alchemy.com/v2/YOUR_KEY
 RPC_8453=https://base-mainnet.g.alchemy.com/v2/YOUR_KEY
 RPC_42161=https://arb-mainnet.g.alchemy.com/v2/YOUR_KEY
 RPC_11155111=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
-RPC_5115=https://rpc.citrea.xyz
+RPC_5115=https://rpc.testnet.citrea.xyz
 
 # Cache Configuration
 CACHE_TTL_SECONDS=30
 CACHE_MAX_SIZE=1000
 CITREA_CACHE_TTL_SECONDS=60
+
+# Ponder API for Citrea Token List
+PONDER_URL=https://ponder.juiceswap.com
 
 # Optional: Redis Configuration (for horizontal scaling)
 # REDIS_URL=redis://localhost:6379
