--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.2",
     "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/sdk-core": "^0.0.1-beta.0",
     "@juiceswapxyz/smart-order-router": "^0.0.1-beta.0",
@@ -23,11 +24,13 @@
     "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.33",
+    "axios": "^1.12.2",
     "bunyan": "^1.8.15",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "graphql": "^16.11.0",
     "graphql-request": "^6.1.0",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
