--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -3,8 +3,7 @@ on:
   workflow_dispatch: {}
   pull_request: {}
   push:
-    branches:
-      - main
+    branches: ['**']
   schedule:
     # random HH:MM to avoid a load spike on GitHub Actions at 00:00
     - cron: '35 11 * * *'
