--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.101",
+    "@swc/jest": "^0.2.29",
     "@types/bunyan": "^1.8.9",
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
