--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ ALCHEMY_5115=none                       # Citrea (uses public RPC)
 # Ponder API for Citrea Token List
 PONDER_URL=https://ponder.juiceswap.com
 
+# DFX Node RPC URL (Citrea)
+DFX_NODE_URL=http://vm-dfx-node-dev.westeurope.cloudapp.azure.com:8085
+
 # Rate Limiting
 RATE_LIMIT_QUOTE_PER_MINUTE=2000
 RATE_LIMIT_GENERAL_PER_MINUTE=10000
