Rename DFX_NODE_URL to CITREA_RPC_URL for consistency
- Use CITREA_RPC_URL to match naming convention in Ponder
- Update all references in .env, .env.example, rpcProvider.ts
- Update GitHub Actions workflows for dev and prd environments

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ ALCHEMY_5115=none                       # Citrea (uses public RPC)
 # Ponder API for Citrea Token List
 PONDER_URL=https://ponder.juiceswap.com
 
-# DFX Node RPC URL (Citrea)
-DFX_NODE_URL=http://vm-dfx-node-dev.westeurope.cloudapp.azure.com:8085
+# Citrea RPC URL
+CITREA_RPC_URL=http://vm-dfx-node-dev.westeurope.cloudapp.azure.com:8085
 
 # Rate Limiting
 RATE_LIMIT_QUOTE_PER_MINUTE=2000
