--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,17 @@ RATE_LIMIT_GENERAL_PER_MINUTE=10000
 
 # Optional: RPC Call Logging (for debugging RPC usage - enabled by default)
 # ENABLE_RPC_LOGGING=false
+
+# PostgreSQL Database
+DATABASE_URL="postgresql://user:password@localhost:5432/juiceswap"
+
+# OG Campaign Configuration
+OG_CAMPAIGN_ENABLED=false
+TWITTER_CLIENT_ID=your_twitter_client_id
+TWITTER_CLIENT_SECRET=your_twitter_client_secret
+TWITTER_CALLBACK_URL=https://app.juiceswap.com/twitter-callback
+JUICESWAP_TWITTER_USER_ID=your_juiceswap_twitter_user_id
+DISCORD_CLIENT_ID=your_discord_client_id
+DISCORD_CLIENT_SECRET=your_discord_client_secret
+DISCORD_CALLBACK_URL=https://app.juiceswap.com/discord-callback
+DISCORD_GUILD_ID=your_discord_server_id
