--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@juiceswapxyz/v2-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v3-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v4-sdk": "^0.0.1-beta.0",
+    "@prisma/client": "^6.16.3",
     "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.33",
@@ -51,6 +52,7 @@
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
+    "prisma": "^6.16.3",
     "ts-jest": "^29.1.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
