--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,14 @@ RATE_LIMIT_GENERAL_PER_MINUTE=10000
 # Optional: RPC Call Logging (for debugging RPC usage - enabled by default)
 # ENABLE_RPC_LOGGING=false
 
-# PostgreSQL Database
+# PostgreSQL Database (required when OG_CAMPAIGN_ENABLED=true)
+# Format: postgresql://username:password@host:port/database
 DATABASE_URL="postgresql://user:password@localhost:5432/juiceswap"
 
-# OG Campaign Configuration
+# Enable OG Campaign tracking (requires DATABASE_URL to be set)
 OG_CAMPAIGN_ENABLED=false
+
+# OG Campaign OAuth Configuration (not yet implemented)
 TWITTER_CLIENT_ID=your_twitter_client_id
 TWITTER_CLIENT_SECRET=your_twitter_client_secret
 TWITTER_CALLBACK_URL=https://app.juiceswap.com/twitter-callback
