--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/server.js",
+    "postinstall": "prisma generate",
     "test": "jest",
     "test:unit": "jest",
     "lint": "eslint src --ext .ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:generate": "prisma generate",
+    "db:migrate:dev": "prisma migrate dev",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:migrate:status": "prisma migrate status",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
@@ -21,6 +28,7 @@
     "@juiceswapxyz/v2-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v3-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/v4-sdk": "^0.0.1-beta.0",
+    "@prisma/client": "^6.16.3",
     "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.33",
@@ -34,6 +42,7 @@
     "graphql-request": "^6.1.0",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
+    "prisma": "^6.16.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
