reduce supported chains

--- a/.env.example
+++ b/.env.example
@@ -9,14 +9,10 @@ LOG_LEVEL=info
 CORS_ORIGINS=http://localhost:3000,https://app.juiceswap.com,https://dev.app.juiceswap.com
 
 # Alchemy API Keys (RPC Providers)
-# Replace with your Alchemy API keys
+# Replace with your Alchemy API keys for supported chains
 ALCHEMY_1=your-alchemy-api-key          # Ethereum Mainnet
-ALCHEMY_10=your-alchemy-api-key         # Optimism
-ALCHEMY_137=your-alchemy-api-key        # Polygon
-ALCHEMY_8453=your-alchemy-api-key       # Base
-ALCHEMY_42161=your-alchemy-api-key      # Arbitrum
-ALCHEMY_11155111=your-alchemy-api-key   # Sepolia (testnet)
-ALCHEMY_5115=none                       # Citrea (uses public RPC)
+ALCHEMY_11155111=your-alchemy-api-key   # Sepolia Testnet
+ALCHEMY_5115=none                       # Citrea Testnet (uses custom RPC)
 
 # Ponder API for Citrea Token List
 PONDER_URL=https://ponder.juiceswap.com
