feat: Add First Squeezer specific Twitter OAuth env vars
- Add FIRST_SQUEEZER_TWITTER_CLIENT_ID
- Add FIRST_SQUEEZER_TWITTER_CLIENT_SECRET
- Add FIRST_SQUEEZER_TWITTER_CALLBACK_URL
- Add FIRST_SQUEEZER_JUICESWAP_TWITTER_USER_ID with @JuiceSwap_com ID
- Update TwitterOAuthService to use First Squeezer env vars with fallback
- User ID: 1975843807011700736

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,9 @@ DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
 DISCORD_CALLBACK_URL=https://app.juiceswap.com/discord-callback
 DISCORD_GUILD_ID=your_discord_server_id
+
+# First Squeezer Campaign OAuth Configuration
+FIRST_SQUEEZER_TWITTER_CLIENT_ID=your_twitter_client_id
+FIRST_SQUEEZER_TWITTER_CLIENT_SECRET=your_twitter_client_secret
+FIRST_SQUEEZER_TWITTER_CALLBACK_URL=http://localhost:3001/first-squeezer/twitter/callback
+FIRST_SQUEEZER_JUICESWAP_TWITTER_USER_ID=1975843807011700736
