--- a/package.json
+++ b/package.json
@@ -40,24 +40,31 @@
     "express-rate-limit": "^7.1.5",
     "graphql": "^16.11.0",
     "graphql-request": "^6.1.0",
+    "helmet": "^8.1.0",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
     "prisma": "^6.16.3",
-    "uuid": "^9.0.1"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^9.0.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@swc/core": "^1.3.101",
     "@swc/jest": "^0.2.29",
     "@types/bunyan": "^1.8.9",
     "@types/express": "^4.17.21",
+    "@types/helmet": "^0.0.48",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
     "jest": "^29.7.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
