--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development
 LOG_LEVEL=info
 
 # CORS Configuration
-CORS_ORIGINS=http://localhost:3000,https://app.juiceswap.com,https://dev.app.juiceswap.com
+CORS_ORIGINS=http://localhost:3000,https://bapp.juiceswap.com,https://dev.bapp.juiceswap.com
 
 # Alchemy API Keys (RPC Providers)
 # Replace with your Alchemy API keys for supported chains
@@ -46,5 +46,5 @@ TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/c
 # Discord OAuth Configuration (not yet implemented)
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
-DISCORD_CALLBACK_URL=https://app.juiceswap.com/discord-callback
+DISCORD_CALLBACK_URL=https://bapp.juiceswap.com/discord-callback
 DISCORD_GUILD_ID=your_discord_server_id
