--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NODE_ENV=development
 LOG_LEVEL=info
 
 # CORS Configuration
-CORS_ORIGINS=http://localhost:3000,https://app.juiceswap.com,https://dev.app.juiceswap.com
+CORS_ORIGINS=http://localhost:3000,https://bapp.juiceswap.com,https://dev.bapp.juiceswap.com
 
 # Alchemy API Keys (RPC Providers)
 # Replace with your Alchemy API keys for supported chains
@@ -34,12 +34,17 @@ DATABASE_URL="postgresql://user:password@localhost:5432/juiceswap"
 # Enable OG Campaign tracking (requires DATABASE_URL to be set)
 OG_CAMPAIGN_ENABLED=false
 
-# OG Campaign OAuth Configuration (not yet implemented)
+# Frontend URL for OAuth redirects
+FRONTEND_URL=http://localhost:3001
+
+# Twitter OAuth 2.0 Configuration (First Squeezer Campaign)
+# Get credentials from: https://developer.x.com/en/portal/projects-and-apps
 TWITTER_CLIENT_ID=your_twitter_client_id
 TWITTER_CLIENT_SECRET=your_twitter_client_secret
-TWITTER_CALLBACK_URL=https://app.juiceswap.com/twitter-callback
-JUICESWAP_TWITTER_USER_ID=your_juiceswap_twitter_user_id
+TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/callback
+
+# Discord OAuth Configuration (not yet implemented)
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
-DISCORD_CALLBACK_URL=https://app.juiceswap.com/discord-callback
+DISCORD_CALLBACK_URL=https://bapp.juiceswap.com/discord-callback
 DISCORD_GUILD_ID=your_discord_server_id
