--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,6 @@ TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/c
 # Get credentials from: https://discord.com/developers/applications
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
+DISCORD_BOT_TOKEN=your_discord_bot_token
 DISCORD_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/discord/callback
 DISCORD_GUILD_ID=your_discord_server_guild_id
