Discord server join verification endpoints (#103)
* verify user follows Juiceswap discord server

* remove PKCE

* switch to discord server invite flow

--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,10 @@ TWITTER_CLIENT_ID=your_twitter_client_id
 TWITTER_CLIENT_SECRET=your_twitter_client_secret
 TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/callback
 
-# Discord OAuth Configuration (not yet implemented)
+# Discord OAuth 2.0 Configuration (First Squeezer Campaign)
+# Get credentials from: https://discord.com/developers/applications
 DISCORD_CLIENT_ID=your_discord_client_id
 DISCORD_CLIENT_SECRET=your_discord_client_secret
-DISCORD_CALLBACK_URL=https://bapp.juiceswap.com/discord-callback
-DISCORD_GUILD_ID=your_discord_server_id
+DISCORD_BOT_TOKEN=your_discord_bot_token
+DISCORD_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/discord/callback
+DISCORD_GUILD_ID=your_discord_server_guild_id
