add all First Squeezer campaign endpoints

--- a/.env.example
+++ b/.env.example
@@ -27,12 +27,9 @@ RATE_LIMIT_GENERAL_PER_MINUTE=10000
 # Optional: RPC Call Logging (for debugging RPC usage - enabled by default)
 # ENABLE_RPC_LOGGING=false
 
-# PostgreSQL Database (required when OG_CAMPAIGN_ENABLED=true)
+# PostgreSQL Database
 # Format: postgresql://username:password@host:port/database
 DATABASE_URL="postgresql://user:password@localhost:5432/juiceswap"
-
-# Enable OG Campaign tracking (requires DATABASE_URL to be set)
-OG_CAMPAIGN_ENABLED=false
 
 # Frontend URL for OAuth redirects
 FRONTEND_URL=http://localhost:3001
@@ -50,3 +47,15 @@ DISCORD_CLIENT_SECRET=your_discord_client_secret
 DISCORD_BOT_TOKEN=your_discord_bot_token
 DISCORD_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/discord/callback
 DISCORD_GUILD_ID=your_discord_server_guild_id
+
+# Enable OG Campaign tracking
+OG_CAMPAIGN_ENABLED=false
+
+# First Squeezer NFT Campaign Configuration
+# Campaign signer private key (generates signatures for NFT claiming)
+# IMPORTANT: This address must match CAMPAIGN_SIGNER_ADDRESS in smart-contracts/.env
+CAMPAIGN_SIGNER_PRIVATE_KEY=your_campaign_signer_private_key_here
+
+# First Squeezer NFT contract address (set after deploying contract)
+# Deploy contract with: cd smart-contracts && npm run create-nft -- "/path/to/image.jpeg"
+FIRST_SQUEEZER_NFT_CONTRACT=your_nft_contract_address_here
