update rpc node to rpc.testnet.juiceswap.com

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ ALCHEMY_5115=none                       # Citrea Testnet (uses custom RPC)
 PONDER_URL=https://ponder.juiceswap.com
 
 # Citrea RPC URL
-CITREA_RPC_URL=http://vm-dfx-node-dev.westeurope.cloudapp.azure.com:8085
+CITREA_RPC_URL=https://rpc.testnet.juiceswap.com
 
 # Rate Limiting
 RATE_LIMIT_QUOTE_PER_MINUTE=2000
