feat: add PonderClient with automatic fallback support
Implements centralized Ponder API client with automatic failover to fallback URL when primary returns 503 (syncing).

Key Features:
- Automatic 503 detection and fallback activation for 10 minutes
- Built-in retry logic (2 attempts, 1s delay)
- Consistent 10-second timeout for all requests
- Centralized error handling and logging
- Support for both GET and POST requests

Changes:
- NEW: src/services/PonderClient.ts - Centralized Ponder client
- MODIFIED: .env.example - Add PONDER_FALLBACK_URL config
- MODIFIED: src/lib/handlers/router-entities/getJuiceswapLatestTokens.ts - Use PonderClient
- MODIFIED: src/endpoints/firstSqueezerCampaign.ts - Use PonderClient in 2 endpoints

Inspired by deuro's Apollo Client fallback pattern, adapted for REST/axios.

This ensures the API remains available when the primary Ponder instance is syncing by automatically switching to the fallback instance.

fix: add defensive check for url initialization

Added type safety and defensive programming:
- Declare url as 'string | undefined' to satisfy TypeScript
- Add defensive check in catch block (should never happen, but safe)
- Ensures production stability even in unexpected edge cases

fix: declare url before try-catch for scope access

TypeScript error: 'url' was declared in try block but accessed in catch block.
Fixed by declaring 'url' before try-catch with 'let' so it's accessible in both blocks.

fix: only retry network errors, not client errors

Critical fix matching deuro's guard pattern (line 36):
- Only 503 and network errors (timeout, connection refused) trigger fallback + retry
- Client errors (400, 404, 500, etc.) are thrown immediately without retry
- This prevents unnecessary retries on errors that fallback cannot solve

Behavior:
- Primary 503 → fallback + retry ✅
- Primary timeout → fallback + retry ✅
- Primary 400/404/500 → throw immediately, no retry ✅
- Fallback error → throw immediately, no retry ✅

This matches de

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ ALCHEMY_5115=none                       # Citrea Testnet (uses custom RPC)
 
 # Ponder API for Citrea Token List
 PONDER_URL=https://ponder.juiceswap.com
+PONDER_FALLBACK_URL=https://dev.ponder.juiceswap.com
 
 # Citrea RPC URL
 CITREA_RPC_URL=https://rpc.testnet.juiceswap.com
