feat: add Twitter following verification for First Squeezer campaign
- Migrate from OAuth 2.0 to OAuth 1.0a for Twitter authentication
- Add friendships/show API integration to verify @JuiceSwap_com following
- Update Prisma schema for OAuth 1.0a session storage (oauthToken, oauthTokenSecret)
- Implement checkFollowingRelationship in TwitterOAuthService
- Reject verification if user doesn't follow @JuiceSwap_com
- Add JUICESWAP_TWITTER_USERNAME environment variable
- Update endpoint to use oauth_token/oauth_verifier instead of code/state

Reasoning: OAuth 2.0 follows endpoints require Enterprise tier ($42k/month).
OAuth 1.0a friendships/show works with standard API access and provides
the required following verification functionality.

--- a/.env.example
+++ b/.env.example
@@ -35,11 +35,13 @@ DATABASE_URL="postgresql://user:password@localhost:5432/juiceswap"
 # Frontend URL for OAuth redirects
 FRONTEND_URL=http://localhost:3001
 
-# Twitter OAuth 2.0 Configuration (First Squeezer Campaign)
+# Twitter OAuth 1.0a Configuration (First Squeezer Campaign)
 # Get credentials from: https://developer.x.com/en/portal/projects-and-apps
-TWITTER_CLIENT_ID=your_twitter_client_id
-TWITTER_CLIENT_SECRET=your_twitter_client_secret
+# Note: OAuth 1.0a is required for friendships/show API access
+TWITTER_CONSUMER_KEY=your_twitter_consumer_key
+TWITTER_CONSUMER_SECRET=your_twitter_consumer_secret
 TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/callback
+JUICESWAP_TWITTER_USERNAME=JuiceSwap_com
 
 # Discord OAuth 2.0 Configuration (First Squeezer Campaign)
 # Get credentials from: https://discord.com/developers/applications
