--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "helmet": "^8.1.0",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
+    "oauth": "^0.10.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
@@ -58,6 +59,7 @@
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.5",
+    "@types/oauth": "^0.9.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^9.0.7",
