--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,11 @@ TWITTER_CLIENT_ID=your_twitter_client_id
 TWITTER_CLIENT_SECRET=your_twitter_client_secret
 TWITTER_CALLBACK_URL=http://localhost:3000/v1/campaigns/first-squeezer/twitter/callback
 
+# TwitterAPI.io Configuration (Follow Verification)
+# Get API key from: https://twitterapi.io/
+TWITTER_API_IO_KEY=your_twitter_api_io_key
+JUICESWAP_TWITTER_USERNAME=JuiceSwap_com
+
 # Discord OAuth 2.0 Configuration (First Squeezer Campaign)
 # Get credentials from: https://discord.com/developers/applications
 DISCORD_CLIENT_ID=your_discord_client_id
