--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
+    "@getalby/lightning-tools": "^6.0.0",
     "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
     "@juiceswapxyz/sdk-core": "^0.0.1-beta.0",
     "@juiceswapxyz/smart-order-router": "^0.0.1-beta.0",
@@ -34,6 +35,7 @@
     "@uniswap/permit2-sdk": "^1.3.0",
     "@uniswap/token-lists": "^1.0.0-beta.33",
     "axios": "^1.12.2",
+    "bech32": "^2.0.0",
     "bunyan": "^1.8.15",
     "dotenv": "^16.3.1",
     "ethers": "^5.7.2",
