--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "prettier": "^3.1.1",
     "prisma": "^6.17.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
