--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   "dependencies": {
     "@apollo/server": "^4.12.2",
     "@getalby/lightning-tools": "^6.0.0",
-    "@juiceswapxyz/router-sdk": "^0.0.1-beta.0",
-    "@juiceswapxyz/sdk-core": "^0.0.1-beta.0",
-    "@juiceswapxyz/smart-order-router": "^0.0.1-beta.0",
-    "@juiceswapxyz/universal-router-sdk": "^0.0.1-beta.0",
-    "@juiceswapxyz/v2-sdk": "^0.0.1-beta.0",
-    "@juiceswapxyz/v3-sdk": "^0.0.1-beta.0",
-    "@juiceswapxyz/v4-sdk": "^0.0.1-beta.0",
+    "@juiceswapxyz/router-sdk": "^0.1.2-beta.0",
+    "@juiceswapxyz/sdk-core": "^0.1.0-beta.0",
+    "@juiceswapxyz/smart-order-router": "^0.1.2-beta.0",
+    "@juiceswapxyz/universal-router-sdk": "^0.1.2-beta.0",
+    "@juiceswapxyz/v2-sdk": "^0.1.0-beta.0",
+    "@juiceswapxyz/v3-sdk": "^0.1.1-beta.0",
+    "@juiceswapxyz/v4-sdk": "^0.1.1-beta.0",
     "@prisma/client": "^6.17.1",
     "@uniswap/default-token-list": "^11.19.0",
     "@uniswap/permit2-sdk": "^1.3.0",
@@ -72,6 +72,7 @@
     "prettier": "^3.1.1",
     "prisma": "^6.17.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
