--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,8 @@ DISCORD_GUILD_ID=your_discord_server_guild_id
 # Campaign signer private key (generates signatures for NFT claiming)
 # IMPORTANT: This address must match CAMPAIGN_SIGNER_ADDRESS in smart-contracts/.env
 CAMPAIGN_SIGNER_PRIVATE_KEY=your_campaign_signer_private_key_here
+
+# Pinata IPFS Configuration (Launchpad Token Metadata)
+# Get credentials from: https://app.pinata.cloud/developers/api-keys
+PINATA_API_KEY=your_pinata_api_key
+PINATA_SECRET_KEY=your_pinata_secret_key
