--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql-request": "^6.1.0",
     "helmet": "^8.1.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -59,6 +60,7 @@
     "@types/helmet": "^0.0.48",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.10.5",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
