--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1",
+    "viem": "^2.44.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
