--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "dependencies": {
     "@apollo/server": "^4.12.2",
     "@getalby/lightning-tools": "^6.0.0",
+    "@juicedollar/jusd": "^1.0.6",
     "@juiceswapxyz/router-sdk": "^0.1.2-beta.0",
-    "@juiceswapxyz/sdk-core": "^0.1.2-beta.0",
+    "@juiceswapxyz/sdk-core": "^0.1.5-beta.0",
     "@juiceswapxyz/smart-order-router": "^0.1.2-beta.0",
     "@juiceswapxyz/universal-router-sdk": "^0.1.2-beta.0",
     "@juiceswapxyz/v2-sdk": "^0.1.0-beta.0",
