feat: upgrade to SDK v3 and add Citrea mainnet support
- Upgrade all @juiceswapxyz packages from v0.1.x-beta to v3.0.x
- Upgrade @juicedollar/jusd from v1.1.0 to v3.0.0
- Add support for Citrea mainnet (chain 4114) RPC provider
- Update environment variables to support both Citrea testnet (5115) and mainnet (4114)
- Refactor RPC URL configuration to use chain-specific environment variables

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,8 @@ PONDER_URL=https://ponder.juiceswap.com
 PONDER_FALLBACK_URL=https://dev.ponder.juiceswap.com
 
 # Citrea RPC URL
-CITREA_RPC_URL=https://rpc.testnet.juiceswap.com
+CITREA_5115_RPC_URL=https://rpc.testnet.juiceswap.com
+CITREA_4114_RPC_URL=https://rpc.citreascan.com/
 
 # Rate Limiting
 RATE_LIMIT_QUOTE_PER_MINUTE=2000
