feat: add bridge TVL and volume to protocol stats

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,10 @@ DISCORD_GUILD_ID=your_discord_server_guild_id
 # IMPORTANT: This address must match CAMPAIGN_SIGNER_ADDRESS in smart-contracts/.env
 CAMPAIGN_SIGNER_PRIVATE_KEY=your_campaign_signer_private_key_here
 
+# Bridge Ponder APIs (for protocol stats)
+JUICEDOLLAR_PONDER_URL=https://ponder.juicedollar.com
+LDS_PONDER_URL=https://lightning.space/v1/claim
+
 # Pinata IPFS Configuration (Launchpad Token Metadata)
 # Get credentials from: https://app.pinata.cloud/developers/api-keys
 PINATA_API_KEY=your_pinata_api_key
