Bridge swaps table

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ PORT=3000
 NODE_ENV=development
 LOG_LEVEL=info
 
+# For the protected routes
+JWT_SECRET=
+
 # CORS Configuration
 CORS_ORIGINS=http://localhost:3000,https://bapp.juiceswap.com,https://dev.bapp.juiceswap.com
 
