--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "graphql": "^16.11.0",
     "graphql-request": "^6.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
@@ -61,6 +62,7 @@
     "@types/express": "^4.17.21",
     "@types/helmet": "^0.0.48",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.10.5",
